--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
           
         <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
           <a href="/posts/post2/" class="db grow">
-            <img src="http://localhost:1313/images/20210513_210443.JPG" class="img" alt="image from Ich beim Werkeln">
+            <img src="http://localhost:1313/images/20210513_210443.jpg" class="img" alt="image from Ich beim Werkeln">
           </a>
         </div>
       
