--- a/public/404.html
+++ b/public/404.html
@@ -68,8 +68,8 @@
         <ul class="pl0 mr3">
           
           <li class="list f5 f4-ns fw4 dib pr3">
-            <a class="hover-white no-underline white-90" href="/contact/" title="Contact page">
-              Contact
+            <a class="hover-white no-underline white-90" href="/pages/contact/" title="Kontakt Seite">
+              Kontakt
             </a>
           </li>
           
