change size of header picture

--- a/public/404.html
+++ b/public/404.html
@@ -115,9 +115,9 @@
     </article>
 
     </main>
-    <footer class="#ff5733 bottom-0 w-100 pa3" role="contentinfo">
+    <footer class="#e1dbdb bottom-0 w-100 pa3" role="contentinfo" style="background-color: #e1dbdb;">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://localhost:1313/Sesselwerkstatt/" >
+  <a class="f4 fw4 hover-white no-underline black dn dib-ns pv2 ph3" href="http://localhost:1313/Sesselwerkstatt/" >
     &copy;  Sesselwerkstatt 2024 
   </a>
     <div>
