--- a/public/404.html
+++ b/public/404.html
@@ -52,9 +52,9 @@
     
 
   
-  <header class="cover bg-top" style="background-image: url('http://localhost:1313/Sesselwerkstatt/images/default.jpg');">
+  <header class="cover bg-top" style="background-image: url('http://localhost:1313/Sesselwerkstatt/images/title_pic.JPG');">
     <div class="bg-black-60">
-      <nav class="pv3 ph3 ph4-ns" role="navigation" style="background-color: #e1dbdb;">
+      <nav class="pv3 ph3 ph4-ns" role="navigation" style="background-color: #f5ebe1;">
   <div class="flex-l justify-between items-center center">
     <a href="/Sesselwerkstatt/" class="f3 fw2 hover-black no-underline black-90 dib">
       
@@ -115,9 +115,9 @@
     </article>
 
     </main>
-    <footer class="#e1dbdb bottom-0 w-100 pa3" role="contentinfo" style="background-color: #e1dbdb;">
+    <footer class="#633331 bottom-0 w-100 pa3" role="contentinfo" style="background-color: #633331;">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline black dn dib-ns pv2 ph3" href="http://localhost:1313/Sesselwerkstatt/" >
+  <a class="f4 fw4 hover-white no-underline white dn dib-ns pv2 ph3" href="http://localhost:1313/Sesselwerkstatt/" >
     &copy;  Sesselwerkstatt 2024 
   </a>
     <div>
