--- a/public/pages/contact/index.html
+++ b/public/pages/contact/index.html
@@ -44,7 +44,7 @@
 
   <meta itemprop="name" content="Kontakt">
   <meta itemprop="description" content="Sie haben Interesse an einem Sessel, oder möchten einen Sessel restaurieren lassen? Senden Sie mir eine Nachricht.">
-  <meta itemprop="wordCount" content="5">
+  <meta itemprop="wordCount" content="4">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Kontakt">
   <meta name="twitter:description" content="Sie haben Interesse an einem Sessel, oder möchten einen Sessel restaurieren lassen? Senden Sie mir eine Nachricht.">
@@ -107,11 +107,12 @@
   </head>
   
   
-  <div class="tc pv4 w-100 ph3 center" style="background-color: #f5ebe1;">
-    <h1 class="lh-title">KONTAKTIEREN SIE MICH</h1>
+  
+  <div class="custom-bg-white tc pv4 w-100 ph3 center" style="background-color: #f5ebe1;">
+    <h1 class="f1">KONTAKTIEREN SIE MICH</h1>
     <p class="f4 lh-copy mw7 center">Sie haben Interesse an einem Sessel, oder möchten einen Sessel restaurieren lassen? Senden Sie mir eine Nachricht.</p>
   </div>
-
+  
   
   <div class="flex-l center" style="background-color: #f5ebe1;">
     <div class="center cf pv3 ph3 ph4-ns mw8 flex">
@@ -125,10 +126,10 @@
 
 <form class="custom-font-white font-Thasadith" accept-charset="UTF-8" action="https://formspree.io/f/xvgojggw" method="POST" role="form">
 
-    <label class="custom-font-white font-Thasadith f6 b db mb1 mt3 sans-serif white"  for="name">Dein Name</label>
+    <label class="custom-font-white font-Thasadith f6 b db mb1 mt3 sans-serif white"  for="name">Name</label>
     <input type="text" id="name" name="name" class="w-100 f5 pv3 ph3 bg-light-gray bn"  required placeholder=" "  aria-labelledby="name"/>
 
-    <label class="custom-font-white font-Thasadith f6 b db mb1 mt3 sans-serif white" for="email">Email Adresse</label>
+    <label class="custom-font-white font-Thasadith f6 b db mb1 mt3 sans-serif white" for="email">E-Mail Adresse</label>
     <input type="email" id="email" name="email" class="w-100 f5 pv3 ph3 bg-light-gray bn"  required placeholder=" "  aria-labelledby="email"/>
     
 
