--- a/public/pages/contact/index.html
+++ b/public/pages/contact/index.html
@@ -109,7 +109,7 @@
   
   
   <div class="custom-bg-white tc pv4 w-100 ph3 center" style="background-color: #f5ebe1;">
-    <h1 class="f1">KONTAKTIEREN SIE MICH</h1>
+    <h1 class="f2">SCHREIBEN SIE MIR</h1>
     <p class="f4 lh-copy mw7 center">Sie haben Interesse an einem Sessel, oder möchten einen Sessel restaurieren lassen? Senden Sie mir eine Nachricht.</p>
   </div>
   
