--- a/public/pages/contact/index.html
+++ b/public/pages/contact/index.html
@@ -44,7 +44,7 @@
 
   <meta itemprop="name" content="Kontakt">
   <meta itemprop="description" content="Sie haben Interesse an einem Sessel, oder möchten einen Sessel restaurieren lassen? Senden Sie mir eine Nachricht.">
-  <meta itemprop="wordCount" content="4">
+  <meta itemprop="wordCount" content="9">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Kontakt">
   <meta name="twitter:description" content="Sie haben Interesse an einem Sessel, oder möchten einen Sessel restaurieren lassen? Senden Sie mir eine Nachricht.">
@@ -136,6 +136,13 @@
     <label class="custom-font-white font-Thasadith f6 b db mb1 mt3 sans-serif white" for="message">Nachricht</label>
     <textarea id="message" name="message" class="w-100 f5 pv3 ph3 bg-light-gray bn h5" aria-labelledby="message"></textarea>
 
+    <div class="mt0" style="display: flex; align-items: center;">
+      <input type="checkbox" id="privacy" name="privacy" required style="margin-right: 10px; margin-top: 10px;">
+      <label for="privacy" class="custom-font-white font-Thasadith f6 b db mb1 mt3 sans-serif white">
+          Ich stimme der <a href="/Sesselwerkstatt/pages/privacy/" target="_blank" class="underline">Datenschutzerklärung</a> zu.
+      </label>
+    </div>
+
     <input class="db w-100 mv2 custom-font-white-90 pa3 bn hover-shadow bg-animate custom-bg-light-red" type="submit" value="Senden" />
 
 </form>
@@ -165,14 +172,24 @@
     </main>
     <footer class="#633331 bottom-0 w-100 pa3" role="contentinfo" style="background-color: #633331;">
   <div class="flex justify-between">
-  <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="https://msteinha.github.io/Sesselwerkstatt/" >
-    &copy;  Sesselwerkstatt 2024 
-  </a>
+    <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="https://msteinha.github.io/Sesselwerkstatt/" >
+      &copy;  Sesselwerkstatt 2024 
+    </a>
     <div>
+      
 <div class="ananke-socials">
   
 </div>
-</div>
+
+    </div>
+    <div style="display: flex; gap: 0;">
+      <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="/Sesselwerkstatt/pages/imprint/" style="margin-right: 0;">
+        Impressum
+      </a>
+      <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="/Sesselwerkstatt/pages/privacy/" style="margin-left: 0;">
+        Datenschutzerklärung
+      </a>
+    </div>
   </div>
 </footer>
 
