--- a/public/404.html
+++ b/public/404.html
@@ -104,23 +104,40 @@
 
     <main class="pb7" role="main">
       
-    <article class="center cf pv5 measure-wide-l">
+  <head>
+    <link rel="stylesheet" href="https://msteinha.github.io/Sesselwerkstatt//css/main.css">
+  </head>
+
+  
+  <div class="center" style="background-color: #f5ebe1;">
+    <div class="center mw8 ph3 pv3" style="line-height: 1.0">
       <h1>
         This is not the page you were looking for
       </h1>
-    </article>
+  </div>
+  </div>
 
     </main>
     <footer class="#633331 bottom-0 w-100 pa3" role="contentinfo" style="background-color: #633331;">
   <div class="flex justify-between">
-  <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="https://msteinha.github.io/Sesselwerkstatt/" >
-    &copy;  Sesselwerkstatt 2024 
-  </a>
+    <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="https://msteinha.github.io/Sesselwerkstatt/" >
+      &copy;  Sesselwerkstatt 2024 
+    </a>
     <div>
+      
 <div class="ananke-socials">
   
 </div>
-</div>
+
+    </div>
+    <div style="display: flex; gap: 0;">
+      <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="/Sesselwerkstatt/pages/imprint/" style="margin-right: 0;">
+        Impressum
+      </a>
+      <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="/Sesselwerkstatt/pages/privacy/" style="margin-left: 0;">
+        Datenschutzerklärung
+      </a>
+    </div>
   </div>
 </footer>
 
