--- a/public/index.html
+++ b/public/index.html
@@ -246,14 +246,24 @@
     </main>
     <footer class="#633331 bottom-0 w-100 pa3" role="contentinfo" style="background-color: #633331;">
   <div class="flex justify-between">
-  <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="https://msteinha.github.io/Sesselwerkstatt/" >
-    &copy;  Sesselwerkstatt 2024 
-  </a>
+    <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="https://msteinha.github.io/Sesselwerkstatt/" >
+      &copy;  Sesselwerkstatt 2024 
+    </a>
     <div>
+      
 <div class="ananke-socials">
   
 </div>
-</div>
+
+    </div>
+    <div style="display: flex; gap: 0;">
+      <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="/Sesselwerkstatt/pages/imprint/" style="margin-right: 0;">
+        Impressum
+      </a>
+      <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="/Sesselwerkstatt/pages/privacy/" style="margin-left: 0;">
+        Datenschutzerklärung
+      </a>
+    </div>
   </div>
 </footer>
 
