--- a/public/pages/contact/index.html
+++ b/public/pages/contact/index.html
@@ -183,10 +183,10 @@
 
     </div>
     <div style="display: flex; gap: 0;">
-      <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="/Sesselwerkstatt/pages/imprint/" style="margin-right: 0;">
+      <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dib-ns pv2 ph3" href="/Sesselwerkstatt/pages/imprint/" style="margin-right: 0;">
         Impressum
       </a>
-      <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dn dib-ns pv2 ph3" href="/Sesselwerkstatt/pages/privacy/" style="margin-left: 0;">
+      <a class="f4 fw4 custom-font-white-90 font-Thasadith no-underline dib-ns pv2 ph3" href="/Sesselwerkstatt/pages/privacy/" style="margin-left: 0;">
         Datenschutzerklärung
       </a>
     </div>
