--- a/public/404.html
+++ b/public/404.html
@@ -67,8 +67,8 @@
         <ul class="pl0 mr3">
           
           <li class="list f5 f4-ns fw4 dib pr3">
-            <a class="no-underline custom-font-red-90 font-Thasadith" href="/" title="Home Seite">
-              Home
+            <a class="no-underline custom-font-red-90 font-Thasadith" href="/" title="Sesselwerkstatt Seite">
+              Sesselwerkstatt
             </a>
           </li>
           
