--- a/public/pages/privacy/index.html
+++ b/public/pages/privacy/index.html
@@ -91,8 +91,8 @@ Ihre E-Mail-Adresse">
         <ul class="pl0 mr3">
           
           <li class="list f5 f4-ns fw4 dib pr3">
-            <a class="no-underline custom-font-red-90 font-Thasadith" href="/" title="Home Seite">
-              Home
+            <a class="no-underline custom-font-red-90 font-Thasadith" href="/" title="Sesselwerkstatt Seite">
+              Sesselwerkstatt
             </a>
           </li>
           
