--- a/public/pages/contact/index.html
+++ b/public/pages/contact/index.html
@@ -61,7 +61,7 @@
       <nav class="pv3 ph3 ph4-ns" role="navigation" style="background-color: #f5ebe1;">
   <div class="flex justify-between items-center center">
     <div class="flex items-center">
-      <a href="/" class="ph3">
+      <a href="/" class="pr3">
         <img src="/images/logo_red.png" alt="Logo" style="height: 40px; width: auto;">
       </a>
       
